@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-30T16:21:40Z",
+  "timestamp" : "2022-10-31T01:48:19Z",
   "count_outdated" : 612,
   "uniques_outdated" : 349,
-  "count" : 657,
+  "count" : 658,
   "uniques" : 374,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
