@@ -1,5 +1,5 @@
 {
-  "count": 45,
+  "count": 46,
   "uniques": 12,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-30T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
